# AIVOA

./: .env.example  .gitignore  README.md  docker-compose.yml
backend/: .dockerignore  Dockerfile  alembic.ini  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py
backend/app/: main.py
backend/app/ai/: __init__.py  agent.py  groq_client.py  tools.py
backend/app/api/: deps.py
backend/app/api/routers/: __init__.py  assistant.py  hcps.py  health.py  interactions.py
backend/app/core/: config.py  exceptions.py
backend/app/db/: session.py  types.py
backend/app/db/models/: __init__.py  hcp.py  interaction.py
backend/app/repositories/: __init__.py  base.py  hcp_repository.py  interaction_repository.py
backend/app/schemas/: __init__.py  assistant.py  hcp.py  interaction.py
backend/app/services/: hcp_service.py  interaction_service.py
backend/scripts/: seed_db.py
backend/tests/: conftest.py  test_hcp_service.py  test_interaction_service.py
frontend/: .dockerignore  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.css  App.tsx
frontend/src/api/: apiSlice.ts
frontend/src/app/: store.ts
frontend/src/components/: Button.css  Button.tsx  Card.css  Card.tsx  HCPAutocomplete.css  HCPAutocomplete.tsx  Modal.css  Modal.tsx  Select.css  Select.tsx  TextField.css  TextField.tsx  __init__.ts
frontend/src/features/assistant/: assistantApi.ts  assistantSlice.ts
frontend/src/styles/: globals.css
frontend/src/types/: domain.ts
(+12 files in other folders)
